--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "BirdYou",
-    "slug": "BirdYou",
+    "name": "BirdYou1",
+    "slug": "BirdYou1",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
