--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "birdyou",
+  "name": "birdyou1",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -10,13 +10,26 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.3.2",
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/stack": "^6.2.2",
+    "axios": "^0.27.2",
     "expo": "~45.0.0",
-    "expo-cli": "^4.3.0",
+    "expo-image-picker": "^13.1.1",
     "expo-status-bar": "~1.3.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-native": "^0.69.1",
-    "react-native-web": "0.17.7"
+    "react-native-document-picker": "^8.1.1",
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "^2.5.0",
+    "react-native-image-picker": "^4.8.4",
+    "react-native-reanimated": "^2.9.1",
+    "react-native-safe-area-context": "^4.3.1",
+    "react-native-screens": "^3.14.1",
+    "react-native-web": "0.17.7",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
